# oikOS

./: .dockerignore  .geminiignore  .gitignore  .gitleaks.toml  ARCHITECTURE.md  Dockerfile  README.md  autonomy_matrix.json  docker-compose.yml  providers.toml.example  pyproject.toml
config/: providers.yaml
config/rooms/: home.json
core/: __init__.py
core/agency/: adversarial.py  (+10 more)
docker/: healthcheck.py
docs/: MCP_SERVER_SETUP.md  OPTIMIZATION_ROADMAP.md  PROMPT_GUARD_EVAL.md  SUPPORTED_MODELS_AND_BACKENDS.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: calibrate_sensitivity.py  docker_rooms_smoke_test.sh  ingest_staging.py  run_gauntlet.py
tests/: test_adversarial.py  test_adversarial_agent.py  test_agency_routes.py  test_anthropic_provider.py  test_api.py  test_approval.py  test_assertions.py  test_auth.py  test_autonomy.py  test_boot_sequence.py  test_browser_extractor.py  test_browser_fetcher.py  test_browser_manager.py  test_browser_monitor.py  test_browser_navigator.py  test_browser_playwright_pool.py  test_browser_rate_limiter.py  test_browser_searcher.py  test_browser_tools_registration.py  test_budget.py  test_calibration.py  test_calibration_system.py  test_chunker.py  test_cloud.py  test_coherence.py  test_compiler.py  test_complexity.py  test_compressor.py  test_confidence.py  test_config_loader.py  test_consolidation.py  test_content_classifier.py  test_context_engine.py  test_contradiction.py  test_cost_tracker.py  test_credits.py  test_daemon.py  test_docker_compose.py  test_drift.py  test_embedder.py  (+67 more)
(+173 files in other folders)
